--- a/Real_Life_Pandas_Exercise_OnlineRetail.ipynb
+++ b/Real_Life_Pandas_Exercise_OnlineRetail.ipynb
@@ -404,11 +404,9 @@
         "id": "a3849f84"
       },
       "source": [
-        "### 2. Create a new column `TotalPrice` = `Quantity` × `UnitPrice` using `.\n",
+        "### 2. Create a new column `TotalPrice` = `Quantity` × `UnitPrice` using `.apply()`.\n",
         "\n",
-        "---\n",
-        "\n",
-        "apply()`."
+        "---\n"
       ]
     },
     {
